<resources>
    <string name="app_name">Tabata Timer</string>

    <string name="work_time_label">Working time (s):</string>
    <string name="rest_time_label">Resting time (s):</string>
    <string name="loop_count_label">Loop count:</string>
    <string name="start_delay_time_label">Start delay time (s):</string>
    <string name="default_work_time">20</string>
    <string name="default_rest_time">10</string>
    <string name="default_loop_count">5</string>
    <string name="default_start_delay_time">3</string>
    <string name="start_button_start">Start</string>
    <string name="start_button_stop">Stop</string>
    <string name="current_loop_label">Current loop:</string>
    <string name="current_time_label">Time:</string>
    <string name="current_state_label">State:</string>
    <string name="current_state_stopped">stopped</string>
    <string name="current_state_start_delay">start delay</string>
    <string name="current_state_work">work</string>
    <string name="current_state_rest">rest</string>
    <string name="zero">0</string>
    <string name="work_time_empty">The \'Working time\' field should not be empty!</string>
    <string name="work_time_less_0">The working time must be greater than 0!</string>
    <string name="rest_time_empty">The \'Resting time\' field should not be empty!</string>
    <string name="rest_time_less_0">The resting time must be greater than 0!</string>
    <string name="loop_count_empty">The \'Loop count\' field should not be empty!</string>
    <string name="loop_count_less_0">The loop count must be greater than 0!</string>
    <string name="start_delay_time_empty">The \'Start delay time\' field should not be empty!</string>
    <string name="start_delay_time_less_0">The start delay time should not be less than 0!</string>
    <string name="open_file_error">Couldn\'t load file \'</string>
</resources>