<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/parameters_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/work_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_time_label"/>

        <EditText
            android:id="@+id/work_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="5"
            android:text="@string/default_work_time"
            android:maxLength="3"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/rest_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_time_label"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/rest_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="5"
            android:text="@string/default_rest_time"
            android:maxLength="3"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/loop_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop_count_label"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/loop_count_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="5"
            android:text="@string/default_loop_count"
            android:maxLength="2"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/parameters_form"
        android:layout_margin="20dp"
        android:text="@string/start_button_start"/>

    <LinearLayout
        android:id="@+id/info_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_button"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/current_state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_state_label"/>

        <TextView
            android:id="@+id/current_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_state_stopped"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/current_loop_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/current_loop_label"/>

        <TextView
            android:id="@+id/current_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/current_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/current_time_label"/>

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>